@@ -26,6 +26,9 @@ recycling=Recycling __1__
 recycler=Recycler
 not-enough-modules=Not enough modules to upgrade machine
 missing-quality-module-upgrade=Quality upgrade for module __1__ not supported
+qual-description=[font=default-semibold][color=255,230,192]Quality probabilities:[/color][/font]\n
+qual-line=[img=jq_quality_icon___1__]:__2__\n
+qual-percent=__1__%[img=jq_quality_icon___2__]
 cant-recycle=Item __1__ can't be recycled
 stupid-fix='
 
